--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@
 
 header {
   background-color: #000000;
-  height: 170px;
+  height: 20rem;
   font-weight: bolder;
 }
 
@@ -67,9 +67,11 @@ header {
 
 #first {
   height: 60rem;
-  padding: 70px 30px;
+  background-color: #000000;
   background-image: url(../img/hero_02.jpg);
+  background-position: 70% 48%;
   background-repeat: no-repeat;
+  background-size: 640px auto;
 }
 
 .start {
@@ -83,7 +85,6 @@ header {
   font-weight: 800;
   line-height: 80px;
   letter-spacing: -1.9px;
-  margin-top: 4rem;
   margin-bottom: 5rem;
   position: relative;
 }
@@ -154,6 +155,10 @@ header {
 .design,
 .solution {
   background-color: #272727;
+  transition: 1s;
+}
+
+.design {
   position: relative;
 }
 
@@ -185,15 +190,16 @@ header {
   left: 50%;
 }
 
-.solution {
+.after-div {
   z-index: 1;
+  position: relative;
 }
 
-.solution::after {
+.after-div::after {
   content: "";
   background-color: #e9204f;
   height: 70px;
-  width: 106%;
+  width: 100%;
   position: absolute;
   bottom: -20px;
   left: 0;
@@ -361,26 +367,35 @@ header {
   margin-right: 20px;
 }
 
+.product:hover .overlay {
+  display: none;
+}
+
+.interior:hover .overlay {
+  display: none;
+}
+
+.woody:hover .overlay {
+  display: none;
+}
+
 .main-works img {
   width: 100%;
   position: relative;
 }
 
-#overlay {
-  position: fixed;
-  display: none;
+.overlay {
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 2;
 }
 
 #about {
-  height: 60rem;
+  height: 70rem;
   background-color: #101010;
   padding: 155px;
 }
@@ -403,8 +418,38 @@ header {
   justify-content: space-between;
 }
 
-.teamwork-img {
-  background-image: url(../img/teamwork.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.about-imgs img {
+  width: 100%;
+}
+
+.teamwork {
+  width: 64%;
+  position: relative;
+}
+
+.img2 {
+  width: 34%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.philosophy {
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.office {
+  position: relative;
+}
+
+.teamwork:hover .overlay {
+  display: none;
+}
+
+.philosophy:hover .overlay {
+  display: none;
+}
+
+.office:hover .overlay {
+  display: none;
 }
